syntax = "proto3";

package user;

message MsgId {
  bytes msg_key = 1;
  bytes ct_hash = 2;
  bytes src_ct = 3;
  bytes sign = 4;
}

message Msg {
  bytes id_bs = 1;
  bytes body = 2;
}

message EeMsg {
  EeMsgHeader header = 1;
  bytes ct = 2;
}

message EeMsgHeader {
  /// Counts the number of messages that have been sent in the current send ratchet
  uint32 n = 1;
  /// Counts the number of messages that have been sent in the previous send ratchet
  uint32 pn = 2;
  bytes dh = 3;
}

message IdShareWithMac {
  IdShare share = 1;
  bytes mac_gamma = 2;
  bytes mac_tao = 3;
}

message IdShare {
  bytes s0 = 1;
  repeated IdShareCw cws = 2;
  bytes cw_np1 = 3;
}

message IdShareCw {
  bytes s = 1;
  bool tl = 2;
  bool tr = 3;
}

message KappaShare {
  bytes s0 = 1;
  repeated KappaShareCw cws = 2;
  bytes cw_np1 = 3;
}

message KappaShareCw {
  bytes s = 1;
  bool tl = 2;
  bool tr = 3;
  bytes v = 4;
}
